ac/lexer/acyy.output
Grammar

    0 $accept: main $end

    1 main: useradmin main
    2     | ruleadmin main
    3     | %empty

    4 useradmin: userop TUSER TWITH attrlist

    5 ruleadmin: ruleop permissionval TON obj TWHEN logic

    6 userop: TADD
    7       | TRM
    8       | TSET

    9 ruleop: TALLOW
   10       | TDENY

   11 attrlist: attrlist TCOMMA attr
   12         | attr

   13 attr: TIDENTIFIER TEQUAL attrval

   14 attrval: TINT
   15        | TDBL
   16        | TSTR
   17        | TIDENTIFIER

   18 permissionval: TREAD
   19              | TWRITE

   20 obj: TTABLE TLBRACKET TSTR TRBRACKET
   21    | TTABLE TLBRACKET TSTR TRBRACKET TROW TLBRACKET TINT TRBRACKET
   22    | TTABLE TLBRACKET TSTR TRBRACKET TCOL TLBRACKET TIDENTIFIER TRBRACKET
   23    | TTABLE TLBRACKET TSTR TRBRACKET TCELL TLBRACKET TINT TDOT TIDENTIFIER TRBRACKET

   24 logicop: TEQUAL TGREATER TGE TLESS TLE

   25 userval: TUSER TDOT TIDENTIFIER

   26 objval: TOBJ TDOT TIDENTIFIER

   27 logic: userval logicop objval
   28      | objval logicop userval
   29      | userval logicop attrval
   30      | attrval logicop userval
   31      | objval logicop attrval
   32      | attrval logicop objval
   33      | TLBRACKET logic TRBRACKET
   34      | logic TAND logic
   35      | logic TOR logic


Terminals, with rules where they appear

$end (0) 0
error (256)
TINT (258) 14 21 23
TDBL (259) 15
TIDENTIFIER (260) 13 17 22 23 25 26
TSTR (261) 16 20 21 22 23
TADD (262) 6
TRM (263) 7
TSET (264) 8
TUSER (265) 4 25
TOBJ (266) 26
TWITH (267) 4
TWHEN (268) 5
TON (269) 5
TTABLE (270) 20 21 22 23
TCOL (271) 22
TROW (272) 21
TCELL (273) 23
TAND (274) 34
TOR (275) 35
TCOMMA (276) 11
TLBRACKET (277) 20 21 22 23 33
TRBRACKET (278) 20 21 22 23 33
TEQUAL (279) 13 24
TGREATER (280) 24
TGE (281) 24
TLESS (282) 24
TLE (283) 24
TDOT (284) 23 25 26
TREAD (285) 18
TWRITE (286) 19
TALLOW (287) 9
TDENY (288) 10


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
main (35)
    on left: 1 2 3, on right: 0 1 2
useradmin (36)
    on left: 4, on right: 1
ruleadmin (37)
    on left: 5, on right: 2
userop (38)
    on left: 6 7 8, on right: 4
ruleop (39)
    on left: 9 10, on right: 5
attrlist (40)
    on left: 11 12, on right: 4 11
attr (41)
    on left: 13, on right: 11 12
attrval (42)
    on left: 14 15 16 17, on right: 13 29 30 31 32
permissionval (43)
    on left: 18 19, on right: 5
obj (44)
    on left: 20 21 22 23, on right: 5
logicop (45)
    on left: 24, on right: 27 28 29 30 31 32
userval (46)
    on left: 25, on right: 27 28 29 30
objval (47)
    on left: 26, on right: 27 28 31 32
logic (48)
    on left: 27 28 29 30 31 32 33 34 35, on right: 5 33 34 35


State 0

    0 $accept: . main $end

    TADD    shift, and go to state 1
    TRM     shift, and go to state 2
    TSET    shift, and go to state 3
    TALLOW  shift, and go to state 4
    TDENY   shift, and go to state 5

    $default  reduce using rule 3 (main)

    main       go to state 6
    useradmin  go to state 7
    ruleadmin  go to state 8
    userop     go to state 9
    ruleop     go to state 10


State 1

    6 userop: TADD .

    $default  reduce using rule 6 (userop)


State 2

    7 userop: TRM .

    $default  reduce using rule 7 (userop)


State 3

    8 userop: TSET .

    $default  reduce using rule 8 (userop)


State 4

    9 ruleop: TALLOW .

    $default  reduce using rule 9 (ruleop)


State 5

   10 ruleop: TDENY .

    $default  reduce using rule 10 (ruleop)


State 6

    0 $accept: main . $end

    $end  shift, and go to state 11


State 7

    1 main: useradmin . main

    TADD    shift, and go to state 1
    TRM     shift, and go to state 2
    TSET    shift, and go to state 3
    TALLOW  shift, and go to state 4
    TDENY   shift, and go to state 5

    $default  reduce using rule 3 (main)

    main       go to state 12
    useradmin  go to state 7
    ruleadmin  go to state 8
    userop     go to state 9
    ruleop     go to state 10


State 8

    2 main: ruleadmin . main

    TADD    shift, and go to state 1
    TRM     shift, and go to state 2
    TSET    shift, and go to state 3
    TALLOW  shift, and go to state 4
    TDENY   shift, and go to state 5

    $default  reduce using rule 3 (main)

    main       go to state 13
    useradmin  go to state 7
    ruleadmin  go to state 8
    userop     go to state 9
    ruleop     go to state 10


State 9

    4 useradmin: userop . TUSER TWITH attrlist

    TUSER  shift, and go to state 14


State 10

    5 ruleadmin: ruleop . permissionval TON obj TWHEN logic

    TREAD   shift, and go to state 15
    TWRITE  shift, and go to state 16

    permissionval  go to state 17


State 11

    0 $accept: main $end .

    $default  accept


State 12

    1 main: useradmin main .

    $default  reduce using rule 1 (main)


State 13

    2 main: ruleadmin main .

    $default  reduce using rule 2 (main)


State 14

    4 useradmin: userop TUSER . TWITH attrlist

    TWITH  shift, and go to state 18


State 15

   18 permissionval: TREAD .

    $default  reduce using rule 18 (permissionval)


State 16

   19 permissionval: TWRITE .

    $default  reduce using rule 19 (permissionval)


State 17

    5 ruleadmin: ruleop permissionval . TON obj TWHEN logic

    TON  shift, and go to state 19


State 18

    4 useradmin: userop TUSER TWITH . attrlist

    TIDENTIFIER  shift, and go to state 20

    attrlist  go to state 21
    attr      go to state 22


State 19

    5 ruleadmin: ruleop permissionval TON . obj TWHEN logic

    TTABLE  shift, and go to state 23

    obj  go to state 24


State 20

   13 attr: TIDENTIFIER . TEQUAL attrval

    TEQUAL  shift, and go to state 25


State 21

    4 useradmin: userop TUSER TWITH attrlist .
   11 attrlist: attrlist . TCOMMA attr

    TCOMMA  shift, and go to state 26

    $default  reduce using rule 4 (useradmin)


State 22

   12 attrlist: attr .

    $default  reduce using rule 12 (attrlist)


State 23

   20 obj: TTABLE . TLBRACKET TSTR TRBRACKET
   21    | TTABLE . TLBRACKET TSTR TRBRACKET TROW TLBRACKET TINT TRBRACKET
   22    | TTABLE . TLBRACKET TSTR TRBRACKET TCOL TLBRACKET TIDENTIFIER TRBRACKET
   23    | TTABLE . TLBRACKET TSTR TRBRACKET TCELL TLBRACKET TINT TDOT TIDENTIFIER TRBRACKET

    TLBRACKET  shift, and go to state 27


State 24

    5 ruleadmin: ruleop permissionval TON obj . TWHEN logic

    TWHEN  shift, and go to state 28


State 25

   13 attr: TIDENTIFIER TEQUAL . attrval

    TINT         shift, and go to state 29
    TDBL         shift, and go to state 30
    TIDENTIFIER  shift, and go to state 31
    TSTR         shift, and go to state 32

    attrval  go to state 33


State 26

   11 attrlist: attrlist TCOMMA . attr

    TIDENTIFIER  shift, and go to state 20

    attr  go to state 34


State 27

   20 obj: TTABLE TLBRACKET . TSTR TRBRACKET
   21    | TTABLE TLBRACKET . TSTR TRBRACKET TROW TLBRACKET TINT TRBRACKET
   22    | TTABLE TLBRACKET . TSTR TRBRACKET TCOL TLBRACKET TIDENTIFIER TRBRACKET
   23    | TTABLE TLBRACKET . TSTR TRBRACKET TCELL TLBRACKET TINT TDOT TIDENTIFIER TRBRACKET

    TSTR  shift, and go to state 35


State 28

    5 ruleadmin: ruleop permissionval TON obj TWHEN . logic

    TINT         shift, and go to state 29
    TDBL         shift, and go to state 30
    TIDENTIFIER  shift, and go to state 31
    TSTR         shift, and go to state 32
    TUSER        shift, and go to state 36
    TOBJ         shift, and go to state 37
    TLBRACKET    shift, and go to state 38

    attrval  go to state 39
    userval  go to state 40
    objval   go to state 41
    logic    go to state 42


State 29

   14 attrval: TINT .

    $default  reduce using rule 14 (attrval)


State 30

   15 attrval: TDBL .

    $default  reduce using rule 15 (attrval)


State 31

   17 attrval: TIDENTIFIER .

    $default  reduce using rule 17 (attrval)


State 32

   16 attrval: TSTR .

    $default  reduce using rule 16 (attrval)


State 33

   13 attr: TIDENTIFIER TEQUAL attrval .

    $default  reduce using rule 13 (attr)


State 34

   11 attrlist: attrlist TCOMMA attr .

    $default  reduce using rule 11 (attrlist)


State 35

   20 obj: TTABLE TLBRACKET TSTR . TRBRACKET
   21    | TTABLE TLBRACKET TSTR . TRBRACKET TROW TLBRACKET TINT TRBRACKET
   22    | TTABLE TLBRACKET TSTR . TRBRACKET TCOL TLBRACKET TIDENTIFIER TRBRACKET
   23    | TTABLE TLBRACKET TSTR . TRBRACKET TCELL TLBRACKET TINT TDOT TIDENTIFIER TRBRACKET

    TRBRACKET  shift, and go to state 43


State 36

   25 userval: TUSER . TDOT TIDENTIFIER

    TDOT  shift, and go to state 44


State 37

   26 objval: TOBJ . TDOT TIDENTIFIER

    TDOT  shift, and go to state 45


State 38

   33 logic: TLBRACKET . logic TRBRACKET

    TINT         shift, and go to state 29
    TDBL         shift, and go to state 30
    TIDENTIFIER  shift, and go to state 31
    TSTR         shift, and go to state 32
    TUSER        shift, and go to state 36
    TOBJ         shift, and go to state 37
    TLBRACKET    shift, and go to state 38

    attrval  go to state 39
    userval  go to state 40
    objval   go to state 41
    logic    go to state 46


State 39

   30 logic: attrval . logicop userval
   32      | attrval . logicop objval

    TEQUAL  shift, and go to state 47

    logicop  go to state 48


State 40

   27 logic: userval . logicop objval
   29      | userval . logicop attrval

    TEQUAL  shift, and go to state 47

    logicop  go to state 49


State 41

   28 logic: objval . logicop userval
   31      | objval . logicop attrval

    TEQUAL  shift, and go to state 47

    logicop  go to state 50


State 42

    5 ruleadmin: ruleop permissionval TON obj TWHEN logic .
   34 logic: logic . TAND logic
   35      | logic . TOR logic

    TAND  shift, and go to state 51
    TOR   shift, and go to state 52

    $default  reduce using rule 5 (ruleadmin)


State 43

   20 obj: TTABLE TLBRACKET TSTR TRBRACKET .
   21    | TTABLE TLBRACKET TSTR TRBRACKET . TROW TLBRACKET TINT TRBRACKET
   22    | TTABLE TLBRACKET TSTR TRBRACKET . TCOL TLBRACKET TIDENTIFIER TRBRACKET
   23    | TTABLE TLBRACKET TSTR TRBRACKET . TCELL TLBRACKET TINT TDOT TIDENTIFIER TRBRACKET

    TCOL   shift, and go to state 53
    TROW   shift, and go to state 54
    TCELL  shift, and go to state 55

    $default  reduce using rule 20 (obj)


State 44

   25 userval: TUSER TDOT . TIDENTIFIER

    TIDENTIFIER  shift, and go to state 56


State 45

   26 objval: TOBJ TDOT . TIDENTIFIER

    TIDENTIFIER  shift, and go to state 57


State 46

   33 logic: TLBRACKET logic . TRBRACKET
   34      | logic . TAND logic
   35      | logic . TOR logic

    TAND       shift, and go to state 51
    TOR        shift, and go to state 52
    TRBRACKET  shift, and go to state 58


State 47

   24 logicop: TEQUAL . TGREATER TGE TLESS TLE

    TGREATER  shift, and go to state 59


State 48

   30 logic: attrval logicop . userval
   32      | attrval logicop . objval

    TUSER  shift, and go to state 36
    TOBJ   shift, and go to state 37

    userval  go to state 60
    objval   go to state 61


State 49

   27 logic: userval logicop . objval
   29      | userval logicop . attrval

    TINT         shift, and go to state 29
    TDBL         shift, and go to state 30
    TIDENTIFIER  shift, and go to state 31
    TSTR         shift, and go to state 32
    TOBJ         shift, and go to state 37

    attrval  go to state 62
    objval   go to state 63


State 50

   28 logic: objval logicop . userval
   31      | objval logicop . attrval

    TINT         shift, and go to state 29
    TDBL         shift, and go to state 30
    TIDENTIFIER  shift, and go to state 31
    TSTR         shift, and go to state 32
    TUSER        shift, and go to state 36

    attrval  go to state 64
    userval  go to state 65


State 51

   34 logic: logic TAND . logic

    TINT         shift, and go to state 29
    TDBL         shift, and go to state 30
    TIDENTIFIER  shift, and go to state 31
    TSTR         shift, and go to state 32
    TUSER        shift, and go to state 36
    TOBJ         shift, and go to state 37
    TLBRACKET    shift, and go to state 38

    attrval  go to state 39
    userval  go to state 40
    objval   go to state 41
    logic    go to state 66


State 52

   35 logic: logic TOR . logic

    TINT         shift, and go to state 29
    TDBL         shift, and go to state 30
    TIDENTIFIER  shift, and go to state 31
    TSTR         shift, and go to state 32
    TUSER        shift, and go to state 36
    TOBJ         shift, and go to state 37
    TLBRACKET    shift, and go to state 38

    attrval  go to state 39
    userval  go to state 40
    objval   go to state 41
    logic    go to state 67


State 53

   22 obj: TTABLE TLBRACKET TSTR TRBRACKET TCOL . TLBRACKET TIDENTIFIER TRBRACKET

    TLBRACKET  shift, and go to state 68


State 54

   21 obj: TTABLE TLBRACKET TSTR TRBRACKET TROW . TLBRACKET TINT TRBRACKET

    TLBRACKET  shift, and go to state 69


State 55

   23 obj: TTABLE TLBRACKET TSTR TRBRACKET TCELL . TLBRACKET TINT TDOT TIDENTIFIER TRBRACKET

    TLBRACKET  shift, and go to state 70


State 56

   25 userval: TUSER TDOT TIDENTIFIER .

    $default  reduce using rule 25 (userval)


State 57

   26 objval: TOBJ TDOT TIDENTIFIER .

    $default  reduce using rule 26 (objval)


State 58

   33 logic: TLBRACKET logic TRBRACKET .

    $default  reduce using rule 33 (logic)


State 59

   24 logicop: TEQUAL TGREATER . TGE TLESS TLE

    TGE  shift, and go to state 71


State 60

   30 logic: attrval logicop userval .

    $default  reduce using rule 30 (logic)


State 61

   32 logic: attrval logicop objval .

    $default  reduce using rule 32 (logic)


State 62

   29 logic: userval logicop attrval .

    $default  reduce using rule 29 (logic)


State 63

   27 logic: userval logicop objval .

    $default  reduce using rule 27 (logic)


State 64

   31 logic: objval logicop attrval .

    $default  reduce using rule 31 (logic)


State 65

   28 logic: objval logicop userval .

    $default  reduce using rule 28 (logic)


State 66

   34 logic: logic . TAND logic
   34      | logic TAND logic .
   35      | logic . TOR logic

    $default  reduce using rule 34 (logic)


State 67

   34 logic: logic . TAND logic
   35      | logic . TOR logic
   35      | logic TOR logic .

    $default  reduce using rule 35 (logic)


State 68

   22 obj: TTABLE TLBRACKET TSTR TRBRACKET TCOL TLBRACKET . TIDENTIFIER TRBRACKET

    TIDENTIFIER  shift, and go to state 72


State 69

   21 obj: TTABLE TLBRACKET TSTR TRBRACKET TROW TLBRACKET . TINT TRBRACKET

    TINT  shift, and go to state 73


State 70

   23 obj: TTABLE TLBRACKET TSTR TRBRACKET TCELL TLBRACKET . TINT TDOT TIDENTIFIER TRBRACKET

    TINT  shift, and go to state 74


State 71

   24 logicop: TEQUAL TGREATER TGE . TLESS TLE

    TLESS  shift, and go to state 75


State 72

   22 obj: TTABLE TLBRACKET TSTR TRBRACKET TCOL TLBRACKET TIDENTIFIER . TRBRACKET

    TRBRACKET  shift, and go to state 76


State 73

   21 obj: TTABLE TLBRACKET TSTR TRBRACKET TROW TLBRACKET TINT . TRBRACKET

    TRBRACKET  shift, and go to state 77


State 74

   23 obj: TTABLE TLBRACKET TSTR TRBRACKET TCELL TLBRACKET TINT . TDOT TIDENTIFIER TRBRACKET

    TDOT  shift, and go to state 78


State 75

   24 logicop: TEQUAL TGREATER TGE TLESS . TLE

    TLE  shift, and go to state 79


State 76

   22 obj: TTABLE TLBRACKET TSTR TRBRACKET TCOL TLBRACKET TIDENTIFIER TRBRACKET .

    $default  reduce using rule 22 (obj)


State 77

   21 obj: TTABLE TLBRACKET TSTR TRBRACKET TROW TLBRACKET TINT TRBRACKET .

    $default  reduce using rule 21 (obj)


State 78

   23 obj: TTABLE TLBRACKET TSTR TRBRACKET TCELL TLBRACKET TINT TDOT . TIDENTIFIER TRBRACKET

    TIDENTIFIER  shift, and go to state 80


State 79

   24 logicop: TEQUAL TGREATER TGE TLESS TLE .

    $default  reduce using rule 24 (logicop)


State 80

   23 obj: TTABLE TLBRACKET TSTR TRBRACKET TCELL TLBRACKET TINT TDOT TIDENTIFIER . TRBRACKET

    TRBRACKET  shift, and go to state 81


State 81

   23 obj: TTABLE TLBRACKET TSTR TRBRACKET TCELL TLBRACKET TINT TDOT TIDENTIFIER TRBRACKET .

    $default  reduce using rule 23 (obj)
